# zenserp

./: .flake8  .mypy.ini  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: renovate.json
.github/workflows/: test.yaml
tests/: mock_zenserp.py  test_client.py  test_exceptions.py  test_search.py
tests/data/: gl.json  hl.json  locations.json  search_engines.json  status.json
tests/data/errors/: invalid_request.json  no_api_key.json  not_enough_requests.json
zenserp/: cli.py  client.py  exceptions.py  model.py  search.py  status.py
