[tool.poetry]
name = "zenserp"
version = "0.1.0"
description = "The Python library for Zenserp."
license = "MIT"
authors = ["scizorman <tueda1207@gmail.com>"]
maintainers = ["scizorman <tueda1207@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/scizorman/zenserp"
repository = "https://github.com/scizorman/zenserp"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = {extras = ["speedups"], version = "3.8.1"}

[tool.poetry.dev-dependencies]
black = "22.1.0"
flake8 = "4.0.1"
isort = "5.10.1"
mypy = "0.931"
pre-commit = "2.17.0"
pytest = "7.0.1"
pytest-aiohttp = "1.0.4"
pytest-cov = "3.0.0"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
addopts = "--cov zenserp --cov-report xml -v"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
